--- a/HomeMarking/app.json
+++ b/HomeMarking/app.json
@@ -1,13 +1,17 @@
 {
-  "pages":[
+  "pages": [
+    "pages/login/index",
+    "pages/Home/index",
+    "pages/Home/index.wxml",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/upload/index"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
